# garycli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_CN.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  README.md  README_CN.md  SECURITY.md  SECURITY_CN.md  config.py  gary_skills.py  install.ps1  install.sh  member.md  prompt_history.txt  pyproject.toml  requirements.txt  setup.py  skills_registry.json  stm32_agent.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: lint.yml  test.yml
ai/: client.py  tools.py
core/: agent.py  canmv_tools.py  cli_config.py  docx_tools.py  esp_tools.py  font_tools.py  generic_tools.py  memory.py  micropython_tools.py  platforms.py  project_store.py  rp2040_tools.py  state.py
hardware/: micropython.py
prompts/: debug.py  member.py  system.py
prompts/templates/: canmv_k230_en.md  canmv_k230_zh.md  debug_hardfault.md  esp_en.md  esp_zh.md  rp2040_en.md  rp2040_zh.md  system_en.md  system_zh.md
skills/: skill.md
skills/dht11_atomic/: README.md  prompt.md  tools.py
skills/dht11_discovery/: README.md  prompt.md  tools.py
skills/ds18b20_atomic/: README.md  prompt.md  tools.py
tests/: conftest.py  test_agent_messages.py  test_ai_client.py  test_config.py  test_debug_prompt.py  test_generic_tools.py  test_memory.py  test_micropython_tools.py  test_platforms.py  test_project_store.py  test_setup_install.py  test_skills.py  test_state.py  test_system_prompt.py  test_think_tags.py  test_tool_selection.py  test_tui_commands.py
tui/: __init__.py  commands.py  ui.py
(+6 files in other folders)
